<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Hello World!"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button00"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button01"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/button00"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button02"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/button01"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button03"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/button02"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button10"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button00" />

    <Button
        android:id="@+id/button11"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button01" />

    <Button
        android:id="@+id/button12"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button02" />

    <Button
        android:id="@+id/button13"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button03" />

    <Button
        android:id="@+id/button20"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button21"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button22"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button23"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button30"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button31"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button32"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button33"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button30">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="vanillaFlag"
            android:text="@string/vanilla" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mediumFlag"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="isyhcdFlag"
            android:text="@string/isyhcd" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ilmmpFlag"
            android:text="@string/ilmmp" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonUP"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginStart="8dp"
        android:onClick="enumUP"
        android:text="@string/up"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/button33"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonDOWN"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:onClick="enumDOWN"
        android:text="@string/down"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/buttonRIGHT"
        app:layout_constraintStart_toEndOf="@+id/buttonLEFT"
        app:layout_constraintTop_toBottomOf="@+id/buttonUP" />

    <Button
        android:id="@+id/buttonLEFT"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:onClick="enumLEFT"
        android:text="@string/left"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/buttonUP"
        app:layout_constraintTop_toBottomOf="@+id/buttonUP" />

    <Button
        android:id="@+id/buttonRIGHT"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:onClick="enumRIGHT"
        android:text="@string/right"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/buttonUP"
        app:layout_constraintTop_toBottomOf="@+id/buttonUP" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startNewGame"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>